# WinFileMgr

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: FileList.cpp  FileList.h  FileMGR.sln  IconCache.cpp  IconCache.h  SidebarTree.cpp  SidebarTree.h  explorer.cpp  explorer.h  log.h  main.cpp  resource.h  resource.rc
src/FileMGR/: FileMGR.vcxproj  FileMGR.vcxproj.filters  main.cpp  res.aps  res.h  res.rc
src/include/: FileList.hpp  IconCache.hpp  SidebarTree.hpp  log.hpp  resource.hpp
src/source/: FileList.cpp  IconCache.cpp  SidebarTree.cpp  resource.rc
